--- a/index.html
+++ b/index.html
@@ -8,16 +8,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="inputs">
-      <input type="text" class="in">
-      <input type="text" class="out">
-    </div>
-    <div class="letters">
-      <div class="letter">
-        <div class="front"></div>
-        <div class="back"></div>
+    <section>
+      <div class="inputs">
+        <input type="text" class="in" value="flex"/>
+        <input type="text" class="out" value="grid"/>
       </div>
-    </div>
+      <div class="characters">
+        <div class="char">
+          <div class="front">f</div>
+          <div class="back">g</div>
+        </div>
+        <div class="char">
+          <div class="front">l</div>
+          <div class="back">r</div>
+        </div>
+        <div class="char">
+          <div class="front">e</div>
+          <div class="back">i</div>
+        </div>
+        <div class="char">
+          <div class="front">x</div>
+          <div class="back">d</div>
+        </div>
+      </div>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
